--- a/waste-management-api/views/assets/collection-point-popup.html
+++ b/waste-management-api/views/assets/collection-point-popup.html
@@ -117,28 +117,34 @@
 
               <div class="row">
                 <div class="col-lg-4 col-md-5 label">Collection Day of the week</div>
-                <div class="col-lg-6 col-md-8">{{city}}</div>
+                <div class="col-lg-6 col-md-8">{{collection_day_of_week}}</div>
               </div>
 
-              <h5 class="card-title">Transportation Routes</h5>
+              <h5 class="card-title">Collection Routes</h5>
+
               <div class="row">
-                <div class="col-lg-4 col-md-5 label">Vechcle</div>
-                <div class="col-lg-6 col-md-8">{{total_bins}}</div>
+                <div class="col-lg-4 col-md-5 label">Transportation Routes ID</div>
+                <div class="col-lg-8 col-md-8">{{transportation_route_id}}</div>
               </div>
-
               <div class="row">
                 <div class="col-lg-4 col-md-5 label">Treatment Site</div>
-                <div class="col-lg-8 col-md-8">{{longitude}}</div>
+                <div class="col-lg-8 col-md-8">{{treatment_site_id}}</div>
               </div>
-
+              <div class="row">
+                <div class="col-lg-4 col-md-5 label">Collection Order</div>
+                <div class="col-lg-8 col-md-8">{{collection_order}}</div>
+              </div>
+              <div class="row">
+                <div class="col-lg-4 col-md-5 label">Vechcle ID</div>
+                <div class="col-lg-6 col-md-8">{{vehicle_id}}</div>
+              </div>
               <div class="row">
                 <div class="col-lg-4 col-md-5 label">Distances</div>
-                <div class="col-lg-8 col-md-9">{{latitude}}</div>
+                <div class="col-lg-8 col-md-9">{{distance}}</div>
               </div>
-
               <div class="row">
                 <div class="col-lg-4 col-md-5 label">Duration</div>
-                <div class="col-lg-8 col-md-9">{{latitude}}</div>
+                <div class="col-lg-8 col-md-9">{{duration}}</div>
               </div>
 
               <h5 class="card-title">Deployed Bins</h5>
