--- a/waste-management-api/views/assets/treatment-sites-popup.html
+++ b/waste-management-api/views/assets/treatment-sites-popup.html
@@ -96,48 +96,38 @@
             <h5 class="card-title">Treatment Site Data</h5>
             <div class="row">
               <div class="col-lg-3 col-md-4 label ">Waste Type</div>
-              <div class="col-lg-9 col-md-8">{{id}}</div>
+              <div class="col-lg-9 col-md-8">{{waste_type_id}}</div>
             </div>
 
             <div class="row">
-              <div class="col-lg-3 col-md-4 label">Weight</div>
-              <div class="col-lg-9 col-md-8">{{code}}</div>
+              <div class="col-lg-3 col-md-4 label">Treatment Type</div>
+              <div class="col-lg-9 col-md-8">{{technology_name}}</div>
             </div>
 
             <div class="row">
-              <div class="col-lg-3 col-md-4 label">Average Weight</div>
-              <div class="col-lg-9 col-md-8">{{name}}</div>
+              <div class="col-lg-3 col-md-4 label">Treated Weight per Year</div>
+              <div class="col-lg-9 col-md-8">{{treated_weight}}</div>
             </div>
 
             <div class="row">
-              <div class="col-lg-3 col-md-4 label">Treatment Technology</div>
-              <div class="col-lg-9 col-md-8">{{name}}</div>
-            </div>
-
-            <div class="row">
-              <div class="col-lg-3 col-md-4 label">Treatment Date</div>
-              <div class="col-lg-9 col-md-8">{{name}}</div>
+              <div class="col-lg-3 col-md-4 label">Energy Consumed per Treatment</div>
+              <div class="col-lg-9 col-md-8">{{energy_consumed}}</div>
             </div>
 
             <h5 class="card-title">Transportation Routes</h5>
             <div class="row">
-              <div class="col-lg-4 col-md-5 label">Vechcle</div>
-              <div class="col-lg-6 col-md-8">{{total_bins}}</div>
+              <div class="col-lg-4 col-md-5 label">Transportation Routes ID</div>
+              <div class="col-lg-6 col-md-8">{{transportation_routes_id}}</div>
             </div>
 
             <div class="row">
-              <div class="col-lg-4 col-md-5 label">Collection Points</div>
-              <div class="col-lg-8 col-md-8">{{longitude}}</div>
+              <div class="col-lg-4 col-md-5 label">Total Duration</div>
+              <div class="col-lg-8 col-md-8">{{total_duration}}</div>
             </div>
 
             <div class="row">
-              <div class="col-lg-4 col-md-5 label">Distances</div>
-              <div class="col-lg-8 col-md-9">{{latitude}}</div>
-            </div>
-
-            <div class="row">
-              <div class="col-lg-4 col-md-5 label">Duration</div>
-              <div class="col-lg-8 col-md-9">{{latitude}}</div>
+              <div class="col-lg-4 col-md-5 label">Total Distance</div>
+              <div class="col-lg-8 col-md-9">{{total_distance}}</div>
             </div>
           </div>
 
