--- a/waste-management-api/views/sidebar_items.pug
+++ b/waste-management-api/views/sidebar_items.pug
@@ -8,13 +8,16 @@ include collection_point.pug
 include treatment_sites.pug
 
 // Transportation Routes Nav
-include transportation_routes.pug
+//- include transportation_routes.pug
 
 // Waste Containers Nav
-include waste_containers.pug
+//- include waste_containers.pug
 
 // Communes Nav
 include  communes.pug
+
+// EPCI Nav
+include  epci.pug
 
 //- // Iris Nav
 //- include iris.pug
@@ -22,24 +25,24 @@ include  communes.pug
 // Buildings Nav
 include building.pug
 
-li.nav-item
-  a.nav-link.collapsed(href="#")
-    i.bi.bi-people
-    span Population
+//- li.nav-item
+//-   a.nav-link.collapsed(href="#")
+//-     i.bi.bi-people
+//-     span Population
 
-nav-item
-  a.nav-link.collapsed(href="/api/wastetypes")
-    i.bi.bi-record2-fill
-    span Waste Types
+//- nav-item
+//-   a.nav-link.collapsed(href="/api/wastetypes")
+//-     i.bi.bi-record2-fill
+//-     span Waste Types
 
 //- // Indicators Nav
 //- include indicators.pug
 
-// Add Data Nav
-include addData.pug
+//- // Add Data Nav
+//- include addData.pug
 
-// Download Data Nav
-include downloadData.pug
+//- // Download Data Nav
+//- include downloadData.pug
 
 li.nav-item
   a.nav-link.collapsed(href="#")
